# ai-project-blueprint

./: .gitignore  .pre-commit-config.yaml  BACKLOG.md  CONTRIBUTING.md  EXPORT_GUIDE.md  FULL_PLAYBOOK_EXPORT.md  README.md  SETUP_SSH_SERVER.md  cleanup_footers.ps1  export-en.md  export-nl.md  export_playbook.ps1  final_fix.ps1  final_repair.ps1  fix_docs.ps1  mkdocs.yml  netlify.toml  package-lock.json  package.json  pyproject.toml  requirements.txt  restore_emojis.ps1  restore_emojis_v2.ps1  restore_emojis_v3.ps1  setup_hooks.sh
.github/: PULL_REQUEST_TEMPLATE.md
chatbot/: Dockerfile  pyproject.toml
chatbot/scripts/: build_index.py
chatbot/src/blueprint_chat/: __init__.py  api.py  chunker.py  config.py  generator.py  indexer.py  models.py  prompts.py  retriever.py
chatbot/tests/: conftest.py  test_api.py  test_chunker.py  test_generator.py  test_retriever.py
chatbot/tests/fixtures/sample_docs/: 01-sample.en.md  01-sample.md  02-no-headings.md
deploy/: .env.example  Caddyfile  ROLLBACK.md  docker-compose.yml  nginx-ai-delivery.conf  setup.sh  update.sh
docs/: .htaccess  _sidebar.md  feedback.en.md  feedback.md  index.de.md  index.en.md  index.fr.md  index.html  index.md  llms-full-nl.txt  llms-full.txt  llms-questions.txt  llms.txt  over.en.md  over.md  qa-index.yaml  release-notes.de.md  release-notes.en.md  release-notes.fr.md  release-notes.md  robots.txt
hooks/: add_noindex.py  pdf_heading_numbers.py  render_covers.py
internal-meta/: AI_COPYWRITER_CONSTITUTION.en.md  AI_COPYWRITER_CONSTITUTION.md  BACKLOG.md  DEFINITION_OF_DONE.md  EXPORT_GUIDE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_V2.md  INFORMATION_ARCHITECTURE.en.md  INFORMATION_ARCHITECTURE.md  MODULE_BESCHRIJVINGEN.md  STYLE_GUIDE.en.md  STYLE_GUIDE.md
mcp_server/: Dockerfile  README.md  pyproject.toml
mcp_server/src/blueprint_mcp/: __init__.py  confidence.py  content_index.py  escalation.py  evidence.py  frontmatter_utils.py  glossary.py  missing_answers.py  response_utils.py  semantic_search.py  server.py  session_store.py  template_engine.py
mcp_server/tests/: conftest.py  test_agents.py  test_content_index.py  test_escalation.py  test_health.py  test_phase2.py  test_phase3.py  test_phase4.py  test_project_setup.py  test_qw.py  test_qw3_docstrings.py  test_response_utils.py  test_semantic_search.py  test_tools.py  test_workflow_tools.py
overrides/: main.html
scripts/: add_missing_answers.py  belgicize_terms.py  blueprint_lint.py  check_sources.py  demo.py  enrich_frontmatter.py  enrich_summary_answers.py  eval_baseline.json  (+12 more)
(+336 files in other folders)
