[project]
name = "blueprint-mcp"
version = "0.1.0"
description = "MCP server exposing AI Project Blueprint guidance, templates, and checklists"
requires-python = ">=3.11"
dependencies = ["mcp[cli]>=1.2.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.scripts]
blueprint-mcp = "blueprint_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blueprint_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes (unused imports, undefined names)
  "I",   # isort (import order)
  "B",   # flake8-bugbear (common bugs)
  "UP",  # pyupgrade (modern Python patterns)
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
]
ignore = [
  "E501",   # line too long — ruff-format handles this
  "B008",   # function calls in default args (FastMCP uses this pattern)
  "SIM108", # ternary instead of if-else — sometimes less readable
]

[tool.ruff.lint.isort]
known-first-party = ["blueprint_mcp"]
